--- a/css/styles.css
+++ b/css/styles.css
@@ -4,21 +4,49 @@ body {
   padding: 20px;
 }
 
+h1 {
+  display: grid;
+  justify-content: center;
+  font-size: 40px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
 
+p {
+  display: grid;
+  justify-content: center;
+}
+
+/* Contenitore principale del team */
+#team-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+  justify-content: center;
+}
 
 /* Stili per le card dei membri del team */
 .team-member {
   background-color: white;
   border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 15px;
+  /* border-radius: 8px; */
+  /* padding: 15px; */
   text-align: center;
-  max-width: 200px;
-  margin: 10px auto;
+  max-width: 100%;
 }
 
 .team-member img {
   max-width: 100%;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   margin-bottom: 10px;
+  transition: transform 0.3s ease;
+}
+
+/* Effetto hover sull'immagine */
+.team-member img:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
